--- a/MODAMSWeb/Views/Shared/layouts/_app-sidebar.cshtml
+++ b/MODAMSWeb/Views/Shared/layouts/_app-sidebar.cshtml
@@ -32,6 +32,26 @@
             <img src="/assets/images/brand/FGS_Small2.png" />
             </div>
             *@
+            <div class="text-muted text-center p-3 h6">
+                @{
+                    if (User.IsInRole("User"))
+                    {
+                        <span>Store User</span>
+                    }
+                    else if (User.IsInRole("StoreOwner"))
+                    {
+                        <span>Store Owner</span>
+                    }
+                    else if (User.IsInRole("Administrator"))
+                    {
+                        <span>System Administrator</span>
+                    }
+                    else
+                    {
+                        <span>Senior Management</span>
+                    }
+                }
+            </div>
             <ul class="side-menu">
                 <li>
                     <h3>Menu</h3>
@@ -71,13 +91,13 @@
                 </li>
                 <li class="slide">
                     <a class="side-menu__item" data-bs-toggle="slide" href="/Users/Home/UnderConstruction">
-                           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="side-menu__icon bi bi-archive" viewBox="0 0 24 24">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="side-menu__icon bi bi-archive" viewBox="0 0 24 24">
                             <g> <path fill="none" d="M0 0h24v24H0z" id="mainIconPathAttribute" stroke-width="0" stroke="#fbf9f9"></path> <path fill-rule="nonzero" d="M5 9a1 1 0 0 1 1 1 6.97 6.97 0 0 1 4.33 1.5h2.17c1.333 0 2.53.58 3.354 1.5H19a5 5 0 0 1 4.516 2.851C21.151 18.972 17.322 21 13 21c-2.79 0-5.15-.603-7.06-1.658A.998.998 0 0 1 5 20H2a1 1 0 0 1-1-1v-9a1 1 0 0 1 1-1h3zm1.001 3L6 17.022l.045.032C7.84 18.314 10.178 19 13 19c3.004 0 5.799-1.156 7.835-3.13l.133-.133-.12-.1a2.994 2.994 0 0 0-1.643-.63L19 15h-2.111c.072.322.111.656.111 1v1H8v-2l6.79-.001-.034-.078a2.501 2.501 0 0 0-2.092-1.416L12.5 13.5H9.57A4.985 4.985 0 0 0 6.002 12zM4 11H3v7h1v-7zm14-6a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-7-5a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 2a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" id="mainIconPathAttribute" stroke="#fbf9f9"></path> </g>
                         </svg>
                         <span class="side-menu__label">Handovers</span>
                     </a>
                 </li>
-                
+
                 <li class="slide">
                     <a class="side-menu__item" data-bs-toggle="slide" href="/Users/Home/UnderConstruction">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="side-menu__icon bi bi-list-check" viewBox="0 0 16 16">
