--- a/MODAMSWeb/Areas/Users/Views/Transfers/EditTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/EditTransfer.cshtml
@@ -173,7 +173,9 @@
                                     </div>
                                     <div class="flex">
                                         <button type="button" class="btn btn-primary " id="btnSubmit"><i class="fa fa-check-circle"></i>&nbsp;Save Transfer</button>
-                                        <button type="button" class="btn btn-primary " id="btnPreview"><i class="fa fa-check-circle"></i>&nbsp;Preview Transfer</button>
+                                        <a asp-area="Users" asp-controller="Transfers" asp-action="PreviewTransfer" asp-route-id="@Model.Transfer.Id" class="btn btn-primary">
+                                            <i class="fa fa-check-circle"></i>&nbsp;Preview Transfer
+                                        </a>
                                     </div>
 
                                 </div>
@@ -198,13 +200,7 @@
         </div>
     </div>
 </div>
-<style>
-    .fancy-shadow {
-        background-color: #f0f0f0;
-        border-radius: 10px;
-        box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3), -10px -10px 20px rgba(255, 255, 255, 0.5);
-    }
-</style>
+
 @section Scripts{
 
     <script>
@@ -245,13 +241,13 @@
             });
         });
         const loadSelection = () => {
-            Data.forEach(function(e){
-                if(e.isSelected==true){
+            Data.forEach(function (e) {
+                if (e.isSelected == true) {
                     selection.push(e.make + " - " + e.assetName + " - " + e.serialNumber);
                 }
             });
 
-            var sHtml = '<Table class="table table-bordered fancy-shadow"><tbody>';
+            var sHtml = '<Table class="table table-bordered"><tbody>';
             if (selection.length > 0) {
                 for (let i = 0; i < selection.length; i++) {
                     sHtml += '<tr><td>' + (i + 1) + '. ' + selection[i] + '</td></tr>';
@@ -283,7 +279,7 @@
                     }
                 }
             });
-            var sHtml = '<Table class="table table-bordered fancy-shadow"><tbody>';
+            var sHtml = '<Table class="table table-bordered"><tbody>';
             if (selection.length > 0) {
                 for (let i = 0; i < selection.length; i++) {
                     sHtml += '<tr><td>' + (i + 1) + '. ' + selection[i] + '</td></tr>';
