--- a/MODAMSWeb/Areas/Users/Views/Transfers/EditTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/EditTransfer.cshtml
@@ -166,7 +166,7 @@
                                         <div class="col-sm-12">
                                             <div class="mb-3 form-group mt-2">
                                                 <label asp-for="Transfer.Notes"></label>
-                                                <input type="text" asp-for="Transfer.Notes" class="form-control" rows="3" />
+                                                <textarea asp-for="Transfer.Notes" class="form-control mb-4" placeholder="Transfer Notes" rows="3"></textarea>
                                                 <span asp-validation-for="Transfer.Notes" class="text-danger"></span>
                                             </div>
                                         </div>
